--- a/PHPCI/View/Session.phtml
+++ b/PHPCI/View/Session.phtml
@@ -56,7 +56,7 @@
         }
 
         #logo {
-            background: transparent url('https://block8.digital/assets/images/b8-phpci-logo-muted.png') no-repeat top left;
+            background: transparent url('/assets/img/logo-large.png') no-repeat top left;
             background-size: 130px 46px;
             display: inline-block;
             height: 46px;
@@ -77,7 +77,7 @@
         }
 
         #logo:hover {
-            background-image: url('https://block8.digital/assets/images/b8-phpci-logo.png');
+            background-image: url('/assets/img/logo-large.png');
         }
 
         #phpci-logo img {
